(lang dune 3.7)

(name nbe)

(generate_opam_files true)

(source
 (github euisuny/nbe))

(authors "Irene Yoon")

(maintainers "Maintainer Name")

(license mit)

(package
 (name nbe)
 (synopsis "nbe")
 (description "nbe for tinylang")
 (depends ocaml dune)
 (tags
  (topics "nbe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
